--- a/cfg/aliases/aliases_controls.cfg
+++ b/cfg/aliases/aliases_controls.cfg
@@ -37,10 +37,10 @@ alias "fin_scorenetoff" "-fin_desubtick_showscores; cl_showfps 0; cq_netgraph 0;
 
 echoln "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
 alias "+fin_cjump" "+fin_desubtick_jump; +fin_desubtick_duck;  alias fin_crouched";                     // This is a crouch jump bind, tapping the key performs
-alias "-fin_cjump" "-fin_desubtick_jump; jumped;               alias fin_crouched -fin_desubtick_duck"; // a perfect crouch jump, holding it keeps you crouched.
+alias "-fin_cjump" "-fin_desubtick_jump; fin_jumped;               alias fin_crouched -fin_desubtick_duck"; // a perfect crouch jump, holding it keeps you crouched.
 
-alias "+fin_crouch" "+fin_desubtick_duck; alias jumped";                      // This makes it so when you release space, it won't
-alias "-fin_crouch" "fin_crouched;        alias jumped -fin_desubtick_duck";  // cancel-out you holding down crouch.
+alias "+fin_crouch" "+fin_desubtick_duck; alias fin_jumped";                      // This makes it so when you release space, it won't
+alias "-fin_crouch" "fin_crouched;        alias fin_jumped -fin_desubtick_duck";  // cancel-out you holding down crouch.
 alias "fin_jumped"  "-fin_desubtick_duck";
 alias "fin_crouched" "-fin_desubtick_duck";
 
