--- a/cfg/aliases/aliases_init.cfg
+++ b/cfg/aliases/aliases_init.cfg
@@ -2,11 +2,6 @@ echoln "[aliases_init.cfg] Start of aliases_init.cfg";
 
 
 
-echoln "[aliases_init.cfg] {1} Allowing all commands";
-sv_unlockedchapters "1";                                        // Highest unlocked game chapter.
-sv_cheats "true";                                               // Allow cheats on server
-
-
 echoln "[aliases_init.cfg] {2} Registering shorthand aliases for common commands";
 // CS2 alias "rc" "fin_nothing";                                // Clears world decals
 alias "dc"  "disconnect";                                       // Disconnect from server
@@ -14,7 +9,7 @@ alias "nc"  "noclip";                                           // Toggle. Playe
 alias "q"   "quit";                                             // Quit the game
 alias "k"   "kill";                                             // Kills the player with generic damage
 alias "bp"  "bot_place";                                        // Places a bot from the map at where the local player is pointing.
-alias "dbg" "exec ./cfg/primary/debug.cfg";                     // Dumps extensive debug information to console and saves it to a file if possible
+alias "dbg" "clear; exec ./cfg/primary/debug.cfg";              // Dumps extensive debug information to console and saves it to a file if possible
 
 
 echoln "[aliases_init.cfg] {3} Registering meta utility aliases used by other aliases";
