--- a/cfg/primary/audio.cfg
+++ b/cfg/primary/audio.cfg
@@ -38,18 +38,21 @@ volume "0.1225";                                                // Changes the m
 echoln "[audio.cfg] {2} Changing miscellaneous sound settings";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
+snd_spatialize_lerp "0";                                        // "L/R Isolation" in-game audio setting
 snd_mute_losefocus "false";                                     // Mute sounds when losing focus
 snd_mixahead "0.0032766439253464310";                           // Lower = less audio audio delay, too low = compressed sounding buggy audio (THIS VARIES SYSTEM TO SYSTEM)
 snd_mute_mvp_music_live_players "true";                         // If set, MVP music is muted if players from both teams are still alive.
 voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
 voice_threshold "0";
 bot_chatter "off";                                               // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
+// For snd_spatialize_lerp:
+// - 0% - Physically Accurate (default): Physically modeled sound panning behavior most accurately reflecting the emitter position.
+// - 100% - Isolated L/R: Sound emitters that are directly to the side of the player will be hard panned with minimal blending into the opposite L/R channel. This provides a strong sense of left vs right but can be positionally misleading at certain angles to the listener. For players who prefer legacy sound panning behaviour.
+//
 // CS2 snd_surround_speakers "0";                                // -1: Auto detect 0/1: Force stereo (with HRTF) 2: Force mono/stereo 4: 4 channel surround 5: 5.1 surround 7: 7.1 surround
 // CS2 snd_prefetch_common "1";                                  // Preloads commonly used sounds
 // CS2 snd_pitchquality "1";                                     // 0: Linear sound mixer 1: Interpolated sound mixer
 // CS2 snd_mix_async "1";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 // CS2 dsp_enhance_stereo "1";                                   // If set to 1, enhanced 3D Stereo sound
-
-
 
 echoln "[audio.cfg] End of audio.cfg";
