--- a/cfg/primary/controls.cfg
+++ b/cfg/primary/controls.cfg
@@ -7,17 +7,18 @@ zoom_sensitivity_ratio "0.818933027098955175";                  // Additional mo
 cl_sniper_delay_unscope "false";                                // 0: Instantly unscope on fire 1: Delay visual unscope after firing
 cl_debounce_zoom "false";                                       // Whether or not to disable holding secondary fire to cycle zoom levels
 sensitivity "3.181818";                                         // Mouse sensitivity.
+mouse_inverty "false";
 m_pitch "0.022";                                                // Mouse pitch factor (0.022 is default) - if you don't know what this is, don't mess with it.
 m_yaw "0.022";                                                  // Mouse yaw factor (0.022 is default) - if you don't know what this is, don't mess with it.
-// CS2 m_forward "1";                                            // Mouse forward factor (with cl_mouselook 0, this controls the movement translation vertically/horizontally)
-// CS2 m_rawinput "1";                                           // Use Raw Input for mouse input, this is generally intended to bypass software tweaks to mouse input like acceleration or smoothing
-// CS2 m_mousespeed  "0";                                        // Windows mouse acceleration (0 to turn off, 1 to turn on)
-// CS2 m_customaccel "0";                                        // Custom mouse acceleration: 0: custom acceleration turned off 1: mouse_acceleration
-// CS2 m_mouseaccel1 "0";                                        // Windows mouse acceleration initial threshold (2x movement).
-// CS2 m_mouseaccel2 "0";                                        // Windows mouse acceleration secondary threshold (4x movement).
-// CS2 m_customaccel_max "0";                                    // Max mouse move scale factor, 0: no limit
-// CS2 m_customaccel_scale "0";                                  // Sets custom mouse acceleration to a certain value
-// CS2 m_customaccel_exponent "1";                               // Mouse move is raised to this power before being scaled by scale factor.
+// CS2 m_forward "1";                                           // Mouse forward factor (with cl_mouselook 0, this controls the movement translation vertically/horizontally)
+// CS2 m_rawinput "1";                                          // Use Raw Input for mouse input, this is generally intended to bypass software tweaks to mouse input like acceleration or smoothing
+// CS2 m_mousespeed  "0";                                       // Windows mouse acceleration (0 to turn off, 1 to turn on)
+// CS2 m_customaccel "0";                                       // Custom mouse acceleration: 0: custom acceleration turned off 1: mouse_acceleration
+// CS2 m_mouseaccel1 "0";                                       // Windows mouse acceleration initial threshold (2x movement).
+// CS2 m_mouseaccel2 "0";                                       // Windows mouse acceleration secondary threshold (4x movement).
+// CS2 m_customaccel_max "0";                                   // Max mouse move scale factor, 0: no limit
+// CS2 m_customaccel_scale "0";                                 // Sets custom mouse acceleration to a certain value
+// CS2 m_customaccel_exponent "1";                              // Mouse move is raised to this power before being scaled by scale factor.
 // I recommend figuring out your eDPI and then changing your
 // mouse DPI to its highest and adjusting your sensitivity.
 // It's better for the game engine to get more precise data
@@ -31,6 +32,12 @@ m_yaw "0.022";                                                  // Mouse yaw fac
 // in-between than you did before.
 // sensitivity * DPI = eDPI
 // eDPI / yourMousesHighestPossibleDPI = newSensitivty
+
+
+echoln "[controls.cfg] {2} Other controls";
+cl_scoreboard_mouse_enable_binding "+fin_desubtick_attack2";    // Name of the binding to enable mouse selection in the scoreboard
+option_speed_method "false";                                    // Input toggle control
+option_duck_method "false";                                     // Input toggle control
 
 
 
