--- a/cfg/primary/debug.cfg
+++ b/cfg/primary/debug.cfg
@@ -4,6 +4,8 @@ echoln "[debug.cfg] Start of debug.cfg";
 
 echoln "[debug.cfg] {1} Printing debug information and saving console log";
 echoln "[debug.cfg]  ";
+sys_info;                                                       // Print system information to the console
+echoln "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
 echoln "[debug.cfg]  ";
 status;                                                         // Print connection status
@@ -11,8 +13,6 @@ echoln "[debug.cfg]  ";
 status_json;                                                    // Print status in JSON format
 echoln "[debug.cfg]  ";
 net_status;                                                     // Shows current network status
-echoln "[debug.cfg]  ";
-sys_info;                                                       // Print system information to the console
 echoln "[debug.cfg]  ";
 tv_broadcast_status;                                            // Print out broadcast status
 echoln "[debug.cfg]  ";
@@ -26,7 +26,78 @@ install_dlc_workshoptools_cvar;                                 // DLC Install S
 echoln "[debug.cfg]  ";
 trusted_launch;                                                 // Trusted launch status
 echoln "[debug.cfg]  ";
+hostname;                                                       // Hostname for server.
+echoln "[debug.cfg]  ";
+name;
+echoln "[debug.cfg]  ";
+tv_name;                                                        // SourceTV host name
+echoln "[debug.cfg]  ";
+tv_title;                                                       // Set title for SourceTV spectator UI
+echoln "[debug.cfg]  ";
 condump;                                                        // dump the text currently in the console to condumpXX.log
+
+
+echoln "[debug.cfg] {2} Clearing and resetting with various defensive commands";
+_resetgamestats;                                                // Erases current game stats and writes out a blank stats file
+dm_reset_spawns;
+bugvoice_clear;                                                 // Clear voice attachment data.
+cl_resetfps;                                                    // Reset information from cl_showfps.
+cc_flush;                                                       // Flushes async'd captions.
+lrucache_flush;                                                 // Flushes the specified cache
+lrucache_reset_stats;                                           // Resets stats for the specified CUtlLRUCaches (or all if none specified)
+econ_clear_inventory_images;                                    // clear the local inventory images (they will regenerate)
+fs_clear_open_duplicate_times;                                  // Clear the list of files that have been opened.
+resource_reset_allocate_timing;                                 // Reset tracked time spent in Allocate (see resource_log_allocate_timing)
+mat_reset_material_costs;                                       // Reset material cost heuristic
+mat_clearshadercache;                                           // Clears the shader cache used for dynamic shader compile.
+scene_flush;                                                    // Flush all .vcds from the cache and reload from disk.
+snd_async_flush;                                                // Flush all unlocked async audio data
+snd_soundmixer_flush;                                           // Reload soundmixers.txt file.
+servervoice_clear;                                              // servervoice_clear
+hud_reloadscheme;                                               // Reloads hud layout and animation scripts.
+soundscape_flush;                                               // Flushes the server & client side soundscapes
+vprof_reset;                                                    // Reset the stats in VProf profiler
+vprof_reset_peaks;                                              // Reset just the peak time in VProf profiler
+voice_reset_mutelist;                                           // Reset all mute information for all players who were ever muted.
+save_clear_subdirectory;
+mp_guardian_clear_all_bounds;                                   // mp_guardian_clear_all_bounds
+mp_guardian_clear_all_player_spawns;                            // mp_guardian_clear_all_player_spawns
+mp_guardian_bomb_plant_clear_all_bounds;                        // mp_guardian_bomb_plant_clear_all_bounds
+cl_reload_hud;                                                  // Reloads the hud scale and resets scale and borders
+gameinstructor_reload_lessons;                                  // Shuts down all open lessons and reloads them from the script file.
+mat_reloadmaterials;                                            // Reloads all materials. Takes an optional substring as an argument.
+mat_reloadshaders;                                              // Reloads all shaders. Takes optional substrings of shader names to recompile as arguments.
+reload_model;                                                   // Force a reload of a vmdl resource
+reload_store_config;
+resource_repeated_reload;                                       // resource_repeated_reload <count> <resource_name> (<resource name> ...): Load and unload the specified resource(s)
+
+
+echoln "[debug.cfg] {3} Clearing and resetting with various cheat commands";
+cl_ent_clear_debug_overlays;                                    // Clears all debug overlays
+cl_ent_text_sticky_clear;                                       // Clears the list of names to display text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
+cl_script_clear_watches;                                        // Clear all watches from the game debug overlay
+cl_ent_text_clear;                                              // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
+clear_bombs;
+ent_text_clear;                                                 // Hide text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
+nav_clear_attribute;                                            // Remove given nav attribute from all areas in the selected set.
+script_clear_watches;                                           // Clear all watches from the game debug overlay
+snd_soundevent_clear_deferred;                                  // Clear the list of deferred soundevents for loading.
+snd_vmidi_flush;                                                // Purge and reload all vmidi data and files.
+//reset_gameconvars                                             // Reset game convars to default values
+cl_rr_reloadresponsesystems;                                    // Reload all response system scripts.
+cl_script_reload;                                               // Reload scripts
+cl_script_reload_code;                                          // Execute a vscript file, replacing existing functions with the functions in the run script
+cl_script_reload_entity_code;                                   // Execute all of this entity's VScripts, replacing existing functions with the functions in the run scripts
+reloadgame;                                                     // Reload the most recent saved game.
+rr_reloadresponsesystems;                                       // Reload all response system scripts.
+
+
+echoln "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
+//unbindall;	                                                  // Unbind all keys.
+//binddefaults;                                                 // Bind all keys to their default values.
+//clear;    // hides debug data                                 // Clear console output.
+//clearall; // hides debug data                                 // Clear console output from all views.
+mp_bot_ai_bt_clear_cache;                                       // Clears the cache for behavior tree files.
 
 
 
