--- a/cfg/primary/init.cfg
+++ b/cfg/primary/init.cfg
@@ -3,11 +3,16 @@ echoln "[init.cfg] Start of init.cfg";
 
 
 echoln "[init.cfg] {1} Initializing";
-hostname "Fin's CS2 Config 5.0.0-beta6 - github.com/bigfinfrank/cfg";  // Sets the server name shown in the scoreboard
-alias "fin_version" "echoln 5.0.0-beta6";                      // Sets version number to an alias (can be output with: "alias fin_version")
-exec "./fixed_controller.360.cfg";                              // Turns on controller support
+hostname "Fin's CS2 Config 5.0.0-beta7 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
+alias "fin_version" "echoln 5.0.0-beta7";                       // Sets version number to an alias (can be output with: "alias fin_version")
 sv_steamgroup "42297947";                                       // The ID of the steam group that this server belongs to. You can find your group's ID on the admin profile page in the steam community. (currently https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "42297947";                                           // Current clan ID for name decoration
+
+
+echoln "[aliases_init.cfg] {2} Removing feature/command limitations";
+sv_unlockedchapters "2147483647";                               // Highest unlocked game chapter.
+cl_new_user_phase "-1";                                         // 0: Not Started, 1: Needs Training, 2: Training Complete, -1: Disabled
+sv_cheats "true";                                               // Allow cheats on server
 
 
 
