--- a/cfg/primary/misc.cfg
+++ b/cfg/primary/misc.cfg
@@ -10,6 +10,9 @@ sv_logbans "true";                                              // Log server ba
 sv_logecho "true";                                              // Echo log information to the console.
 con_enable "true";                                              // Allows the console to be activated.
 developer "4";                                                  // This turns on a bunch of dev commands and features
+mp_logdetail "3";                                               // Logs attacks. Values are: 0=off, 1=enemy, 2=teammate, 3=both)
+mp_logmoney "true";                                             // Enables money logging. Values are: 0=off, 1=on
+mp_logdetail_items "true";                                      // Logs a line any time a player acquires or loses an item.
 // CS2 con_timestamp "1";                                        // for diagnosing issues with your game if they ever
 
 
@@ -30,6 +33,7 @@ player_nevershow_communityservermessage "1";                    // Disables the 
 mm_csgo_community_search_players_min "10";                      // When performing CSGO community matchmaking look for servers with at least so many human players
 cl_show_clan_in_death_notice "true";                            // If set, the clan name will show next to player names in the kill feed.
 cl_playerspray_auto_apply "true";                               // Automatically apply graffiti when graffiti menu closes
+cl_dm_buyrandomweapons "false";                                 // Player will automatically receive a random weapon on spawn in deathmatch if this is set to 1 (otherwise, they will receive the last weapon)
 cl_observed_bot_crosshair "1";                                  // 0: Show player crosshair 1: Only show player crosshair when the bot can be taken over 2: Always show the default crosshair for bots
 cl_use_opens_buy_menu "false";                                  // Pressing the +use key will open the buy menu if in a buy zone (just as if you pressed the 'buy' key).
 cl_obs_interp_enable "false";                                   // Enables interpolation between observer targets
