--- a/cfg/primary/safety.cfg
+++ b/cfg/primary/safety.cfg
@@ -4,6 +4,8 @@ echoln "[safety.cfg] Start of safety.cfg";
 
 echoln "[safety.cfg] {1} Privacy & safety settings";
 cl_mute_all_but_friends_and_party "0";                          // Only allow communication from friends and matchmaking party members. Set to 1 to apply the in non-competitive game modes. Set to 2 will apply the setting in all modes.
+cl_server_graphic1_enable "false";                              // When enabled, 360x60 (<16kb) image file will be displayed to on-server spectators.
+cl_server_graphic2_enable "false";                              // When enabled, 220x45 (<16kb) image file will be displayed to on-server spectators.
 cl_sanitize_muted_players "false";                              // Hide names and avatars of muted players.
 cl_sanitize_player_names "false";                               // Replace names of other players with something non-offensive.
 cl_invites_only_mainmenu "true";                                // If turned on, will ignore all invites when user is playing a match
@@ -26,8 +28,24 @@ ui_setting_advertiseforhire_auto "0";                           // Whether users
 hostname_in_client_status "false";                              // Show server hostname in client status.
 lobby_default_privacy_bits2 "0";                                // Lobby default permissions (0: private, 1: public)
 mp_footsteps_serverside "true";                                 // Makes the server always play footstep sounds. Clients never calculate footstep sounds locally, instead relying on the server.
-tv_advertise_watchable "false";                                 // GOTV advertises the match as watchable via game UI, clients watching via UI will not need to type password
+nextmap_print_enabled "false";                                  // When enabled prints next map to clients
 tv_nochat "true";                                               // Don't receive chat messages from other SourceTV spectators
+tv_relayvoice "false";                                          // Relay voice data: 0=off, 1=on
+tv_relayradio "false";                                          // Relay team radio commands to TV: 0=off, 1=on
+tv_show_allchat "false";
+tv_advertise_watchable "false";                                 // GOTV advertises the match as watchable via game UI, clients watching via UI will not need to type password
+cl_chatfilters "2147483647";
+// 00000001 | 1   | Show Joins/leaves in chat
+// 00000010 | 2   | Show Name Changes in chat
+// 00000100 | 4   | Show Public Chat (disable for only team chat ?? )
+// 00001000 | 8   | Show Server Messages (if only this would work on messages from plugins...)
+// 00010000 | 16  | Show Team Changes
+// 00100000 | 32  | Show Achievement Announce
+// 01000000 | 64  | Unknown/unused
+// 10000000 | 128 | Unknown/unused
+// 11111111 | 255 | All of the above on
+// 2147483647 Will enable every possible value.
+//
 // CS2 cl_downloadfilter "nosounds";                            // Determines which files can be downloaded from the server (all, none, nosounds)
 // CS2 sv_reliableavatardata "2";                               // When enabled player avatars are exchanged via gameserver (0: off, 1: players, 2: server)
 // CS2 sv_steamauth_enforce "2";                                // Requires connection to steam servers for VAC
