--- a/cfg/primary/ui.cfg
+++ b/cfg/primary/ui.cfg
@@ -11,7 +11,6 @@ cl_radar_rotate "false";                                        // Enables/disab
 cl_radar_scale "0.4";                                           // Sets the radar scale. Valid values are 0.25 to 1.0.
 
 
-
 echoln "[ui.cfg] {2} Changing the crosshair";                   // Slightly tweaked version of the one from here: https://www.reddit.com/comments/3pyf1f
 cl_crosshair_sniper_show_normal_inaccuracy "true";              // Include standing inaccuracy when determining sniper crosshair blur
 cl_crosshair_dynamic_splitalpha_outermod "0.5";                 // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the OUTER crosshair pips once they've split.
@@ -40,28 +39,36 @@ cl_crosshair_t "false";                                         // T style cross
 crosshair  "true";
 fin_blockscreen_on;
 
+
 echoln "[ui.cfg] {3} Adjusting the HUD";
 cl_teamcounter_playercount_instead_of_avatars "true";
 cl_scoreboard_survivors_always_on "true";                       // Fixes a problem calculating the number of dead players when rounds end
 cl_drawhud_force_teamid_overhead "1";                           // 0: default; 1: draw team ID even if hud disabled; -1: force no team ID
-cl_allow_animated_avatars "false";                              // Whether or not to allow animated avatars
 cl_radial_radio_tap_to_ping "true";                             // When tapping the radial radio button, leave a ping if nothing is selected within the time in seconds set in cl_radial_menu_tap_duration
+cl_draw_only_deathnotices "false";                              // For drawing only the crosshair and death notices (used for moviemaking)
+cl_drawhud_force_deathnotices "1";                              // 0: default; 1: draw deathnotices even if hud disabled; -1: force no deathnotices
+cl_inventory_debug_tooltip "true";
+cl_allow_animated_avatars "false";                              // Whether or not to allow animated avatars
 cl_teamid_overhead_mode "2";                                    // Always show team ID over teammates. 1 = pips; 2 = pips, name, and equipment
+cl_drawhud_force_radar "1";                                     // 0: default; 1: draw radar even if hud disabled; -1: force no radar
+cl_drawhud_specvote "true";                                     // 1: default; 0: disables vote UI for spectators
 cl_hud_radar_scale "2";                                         // Sets the radar to its default scale, changing this can be buggy
 cl_showloadout "true";                                          // Toggles display of current loadout.
-cl_hud_color "12";                                              // Sets the hud color to show player colors
+cl_drawhud "true";                                              // Enable the rendering of the hud
+hidehud "0";                                                    // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle
 hud_scaling "0.9";                                              // Scales hud elements
+hud_fastswitch "1";
 hud_showtargetid "true";                                        // Enables display of target names
 r_show_build_info "true";                                       // Build information. Leave this enabled when submitting bug screenshots and videos, please!
+spec_hide_players "false";                                      // Toggle the visibility of scoreboard players.
+ui_party_msg_sound_enabled "false";                             // When enabled, lobby messages will play a short sound
 ui_steam_overlay_notification_position_vert "0";                // Steam overlay notification position vertical offset
 ui_steam_overlay_notification_position_horz "80";               // Steam overlay notification position horizontal offset
 ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
-// CS2 cl_hud_playercount_showcount "1";                        // Shows a numbers instead of profile pictures for alive players
-// CS2 cl_hud_background_alpha "0.1";                           // Makes the hud background semi-transparent
-// CS2 cl_hud_healthammo_style "1";                             // Hides stuff like health bars (only show numbers) and burst mode
-// CS2 cl_hud_bomb_under_radar "1";                             // Show yellow bomb icon under the radar instead of with weapons
-// CS2 cl_hud_playercount_pos "1";                              // 0: Put score/round timer/players alive UI at the top of the screen 1: Put it at the bottom
-// CS2 hud_takesshots "0";                                      // Auto-save a scoreboard screenshot at the end of a map
+
+
+echoln "[ui.cfg] {3} Final HUD Adjustments";
+cl_hud_color "12";                                              // Sets the hud color to show player colors
 //
 // cl_hud_color 0   = VARIES (RRR, GGG, BBB) CT Blue (97c9fa (151, 201, 250)) or T Orange (eabf55 (234, 191, 85)) (based on side)
 // cl_hud_color 1   = e8e8e8 (232, 232, 232) White (low opacity)
@@ -77,8 +84,46 @@ ui_steam_overlay_notification_position "topright";              // Steam overlay
 // cl_hud_color 11  = ff9dcd (255, 157, 205) Salmon
 // cl_hud_color 12  = VARIES (RRR, GGG, BBB) Player color, green/purple/yellow/blue/orange
 // cl_hud_color 13+ = ffffff (255, 255, 255) White (no weapon/utility icons, high opacity)
+ui_vanitysetting_loadoutslot_ct "heavy5";
+ui_vanitysetting_loadoutslot_t  "heavy5";
+ui_vanitysetting_team "t";
+//
+// ui_vanitysetting_loadoutslot_(c)t | equipment0 | Kevlar vest (no helmet)
+// ui_vanitysetting_loadoutslot_(c)t | equipment1 | Kevlar vest and helmet
+// ui_vanitysetting_loadoutslot_(c)t | equipment2 | Zeus x27 Taser
+// ui_vanitysetting_loadoutslot_ct   | equipment3 | Defuse Kit
+// ui_vanitysetting_loadoutslot_t    |     c4     | C4 Explosive Bomb
+// ui_vanitysetting_loadoutslot_(c)t |  grenade0  | Flashbang Grenade
+// ui_vanitysetting_loadoutslot_(c)t |  grenade1  | Smoke Grenade
+// ui_vanitysetting_loadoutslot_(c)t |  grenade2  | HE High Explosive Grenade
+// ui_vanitysetting_loadoutslot_(c)t |  grenade3  | Molotov/Incendiary Fire Grenade
+// ui_vanitysetting_loadoutslot_(c)t |  grenade4  | Decoy Grenade
+// ui_vanitysetting_loadoutslot_(c)t |   heavy5   | Riot Shield
+cl_inventory_saved_filter2 "all";
+//
+//  All Weapons | only_weapons
+// Cases & Keys | not_equipment
+//  Music Kits  | musickit
+//  Unfiltered  | all
+//   Stickers   | item_definition:sticker,not_base_item
+//   Graffiti   | spray
+//    Pistols   | secondary
+//    Display   | flair0
+//    Rifles    | rifle
+//    Knives    | melee
+//    Gloves    | clothing
+//     Heavy    | heavy
+//     SMGs     | smg
+cl_inventory_saved_sort2 "inv_sort_rarity"
+// Alphabetical | inv_sort_alpha
+//  Equip Slot  | inv_sort_slot
+//  Collection  | inv_sort_collection
+//   Equipped   | inv_sort_equipped
+//   Aquired    | inv_sort_age
+//   Quality    | inv_sort_rarity
 
-// CS2 echoln "[ui.cfg] Reset/refresh states";
+
+// CS2 echoln "[ui.cfg] {4} Reset/refresh states";
 // CS2 hud_reloadscheme;                                               // Reloads hud layout and animation scripts.
 
 
