--- a/cfg/primary/visuals.cfg
+++ b/cfg/primary/visuals.cfg
@@ -33,7 +33,9 @@ fps_max_tools "0";                                              // Additional fr
 panorama_max_fps "0";                                           // [developmentonly+defensive]
 panorama_max_overlay_fps "0";                                   // [developmentonly+defensive]
 battery_saver "false";                                          // OBSOLETE replaced by mobile_fps_* - Battery saver mode. 0=off, 1=on
+r_dof_override "false";
 r_fullscreen_gamma "2.2";                                       // Gamma 'typically 2.2 for CRT and 1.7 for LCD'
+r_player_visibility_mode "1";                                   // Improves the legibility of players in low contrast situations. Enabling Boost Player Contrast can degrade graphics performance.
 cl_itemimages_dynamically_generated "2";                        // 2: use render-targets, fallback to cache and disk; 1: no render targets, but use cache and fallback to disk; 0: disk assets only
 engine_low_latency_sleep_after_client_tick "true";              // When r_low_latency is enabled, this moves the low latency sleep on tick frames to happen after client simulation.
 // CS2 triple_monitor_mode "0";                                  // 1: triple-monitor mode, restricting UI elements to the middle third of the display
