--- a/cfg/utility/skinpictures.cfg
+++ b/cfg/utility/skinpictures.cfg
@@ -1,14 +1,22 @@
 echoln "[skinpictures.cfg] Start of skinpictures.cfg";
 
 
+
 r_dof_override "true";
+r_show_build_info "false";              // Build information. Leave this enabled when submitting bug screenshots and videos, please!
 r_dof_override_near_blurry "80";
-cl_draw_only_deathnotices "true";
-cl_drawhud "false";
-cl_drawhud_force_teamid_overhead "-1";
+cl_draw_only_deathnotices "true";       // For drawing only the crosshair and death notices (used for moviemaking)
+cl_drawhud "false";                     // Enable the rendering of the hud
+cl_drawhud_force_teamid_overhead "-1";  // 0: default; 1: draw teamid even if hud disabled; -1: force no teamid
+cl_drawhud_force_deathnotices "-1";     // 0: default; 1: draw deathnotices even if hud disabled; -1: force no deathnotices
+cl_drawhud_force_radar "-1";            // 0: default; 1: draw radar even if hud disabled; -1: force no radar
+cl_drawhud_specvote "0";                // 1: default; 0: disables vote UI for spectators
 crosshair "false";
-r_show_build_info "false";
-fps_max "60";
+fps_max "60";                           // Frame rate limiter. 0=no limit. Does not apply to dedicated server.
+hidehud "2147483647";                   // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle
+spec_hide_players "true";               // Toggle the visibility of scoreboard players.
+hud_showtargetid "false";               // Enables display of target names
+
 
 
 echoln "[skinpictures.cfg] End of skinpictures.cfg";
