--- a/practice.cfg
+++ b/practice.cfg
@@ -4,9 +4,9 @@ echoln "[practice.cfg] Start of practice.cfg";
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loading...";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.6";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.7";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: October 31st 2023";
+echoln "[practice.cfg] Last edited: November 1st 2023";
 echoln "[practice.cfg] ";
 
 
@@ -46,6 +46,9 @@ sv_logsdir "logs";                                      // Folder in the game di
 sv_lan "false";                                         // Server is a lan server ( no heartbeat, no authentication, no non-class C addresses )
 developer "4";                                          // Set developer message level. ( See https://developer.valvesoftware.com/wiki/Developer )
 con_enable "true";                                      // Allows the console to be activated.
+mp_logdetail_items "true";                              // Logs a line any time a player acquires or loses an item.
+mp_logmoney "true";                                     // Enables money logging. Values are: 0=off, 1=on
+mp_logdetail "3";                                       // Logs attacks. Values are: 0=off, 1=enemy, 2=teammate, 3=both)
 
 
 echoln "[practice.cfg] {4} Changing game mode to competitive";
@@ -121,12 +124,14 @@ sv_kick_ban_duration "0";                               // How long should a kic
 sv_steamgroup "44453148";                               // The ID of the steam group that this server belongs to. You can find your group's ID on the admin profile page in the steam community.
 sv_pure "2";                                            // Show user data.
 mp_tkpunish "0";                                        // Will TK'ers and team damagers be punished in the next round?  {0=no,  1=yes}
+mp_spectators_max "2147483647";                         // How many spectators are allowed in a match.
 mp_limitteams "0";                                      // Max # of players 1 team can have over another (0 disables check)
 mp_autokick "false";                                    // Kick idle/team-killing/team-damaging players
 mp_suicide_penalty "false";                             // Punish players for suicides
 mp_autoteambalance "false";
 mp_spawnprotectiontime "0";                             // Kick players who team-kill within this many seconds of a round restart.
 mp_footsteps_serverside "true";                         // Makes the server always play footstep sounds. Clients never calculate footstep sounds locally, instead relying on the server.
+nextmap_print_enabled "false";                          // When enabled prints next map to clients
 hostname_in_client_status "false";                      // Show server hostname in client status.
 // CS2 sv_max_allowed_developer "0";
 // CS2 sv_allow_wait_command "0";
@@ -391,9 +396,9 @@ respawn_player;                                         // Respawns the player f
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loaded!";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.6";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.7";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: October 31st 2023";
+echoln "[practice.cfg] Last edited: November 1st 2023";
 echoln "[practice.cfg] ";
 
 
